style.css
/* ... */
@media only screen and (max-width: 90em) { /* 1440px */
	.preload-screen img {
		width: 3.5rem;
	}

	.home-page__wrapper {
		padding-bottom: 6rem;
	}

	.portfolio-page__wrapper {
		padding-bottom: 6rem;
	}

	.about-page__wrapper {
		padding-bottom: 6rem;
	}

	.contact-page__wrapper {
		padding-bottom: 6rem;
	}

	.page-number {
		position: relative;
		margin-bottom: 1rem;
		margin-left: -1rem;
	}
	
	.row {
		max-width: 64rem;
	}

	.home-page__yellow-element {
		top: 5%;
	}
}

@media only screen and (max-width: 80em) { /* 1280px */

	.row {
		max-width: 60em;
	}
	.col-6 {
		flex: 0 0 75%;
		max-width: 75%;
	}

	.home-page__wrapper {
		padding-left: 4.5rem;
		padding-right: 4.5rem;
	}

	.portfolio-page__wrapper {
		padding: 7rem 4.5rem 4rem 4.5rem;
	}

	.portfolio-page__image {
		height: 37%;
	}

	.portfolio-project__title {
		font-size: clamp(1.2rem, 3.2vmin, 1.5rem);
		line-height: clamp(1.2rem, 3.2vmin, 1.5rem);
	}

	.portfolio-project__tech {
		font-size: .95rem;
	}

	.portfolio-project__link {
		font-size: 1rem;
	}

	.portfolio-project__description {
		font-size: .95rem;
	}

	.about-page__wrapper {
		padding: 7rem 4.5rem;
	}

	.contact-page__wrapper {
		padding-left: 4.5rem;
		padding-right: 4.5rem;
	}

}

@media only screen and (max-width: 71.25em) { /* 1140px */
	.menu {
		width: 40%;
	}

	.row {
		padding: 0 0rem;
	}

	.home-page__wrapper {
		padding-bottom: 9rem;
	}

	.home-page__dots-square {
		top: 75%;
		right: 10%;
	}

	.portfolio-page__animation--bottom {
		flex-direction: column;
	}

	.portfolio-page__wrapper {
		padding-left: 8rem;
		padding-right: 8rem;
	}

	.portfolio-page__projects-box {
		flex-direction: row-reverse;
		height: 20rem;
		border-radius: 3.375rem 1rem 3.375rem 1rem;
	}
	
	.portfolio-page__image {
		height: 100%;
		width: 45%;
	}

	.about-page__wrapper .row {
		padding-left: 4rem;
	}

	.about-page__description {
		margin-right: 0;
	}

	.about-page__dots-square {
		top: 75%;
		right: 25%; 
		width: 32vmin;
		height: 32vmin;
	}

	.contact-page__wrapper .row {
		width: 90%;
	}

	.contact-page__form-wrapper {
		width: 100%;
	}

}

@media only screen and (max-width: 60em) { /* 960px */
	.home-page__wrapper {
		padding-top: 7.75rem;
	}

	.contact-page__title {
		width: 100%;
	}

	.contact-page__blue-element {
		bottom: -50rem;
	}

	.contact-page__yellow-element {
		top: 20%;
	}

	.contact-page__title::after {
		display: none;
	}
}

@media only screen and (max-width: 54em) { /* 864 */
	.portfolio-page__wrapper {
		padding: 7rem 5.5rem 4rem 5.5rem;
	}

	.about-page__dots-square {
		top: 80%;
		right: 20%; 
		width: 30vmin;
		height: 30vmin;
	}
}

@media only screen and (max-width: 48em) { /* 768px */

	.col-10 {
		flex: 0 0 90%;
		max-width: 90%;
		width: 90%;
		margin: 0 auto;
	}

	.fixed__bottom-icons {
		left: .7rem;
		bottom: 1rem;
	}
	
	.fixed__top {
		padding: 0 .7rem;
		top: 1rem;
	}

	.show-nav {
		height: 5.3rem !important;
	}

	.page-number {
		left: 0rem;
		margin-left: 0;
	}

	.page-number-contact {
		left: .7rem;
	}

	.fixed__top-nav_btn {
		right: 1.2rem;
		top: 1.9rem;
	}

	.fixed__bottom-arrow {
		right: .7rem;
		bottom: 1rem;
	}

	#pp-nav ul, .pp-slidesNav ul {
		padding-right: 0rem !important;
		margin-right: -.5rem !important;
	}

	.menu {
		width: 100%;
		max-width: 100%;
	}

	.icons {
		padding-bottom: 3rem;
	}

	.home-page__wrapper {
		padding: 5rem 2.8rem 4rem 2.8rem;
	}

	.home-page__title-sub {
		font-size: 1.5rem;
	}

	.home-page__description {
		font-size: 1rem;
	}

	.home-page__btn {
		font-size: 1rem;
	}

	.about-page__wrapper {
		padding-left: 2.8rem;
		padding-right: 2.8rem;
	}

	.portfolio-page__wrapper {
		padding: 4.5rem 2.8rem 4.5rem 2.8rem;
	}

	.contact-page__wrapper {
		padding-left: 2.8rem;
		padding-right: 2.8rem;
		padding-top: 5rem;
	}

	.about-page__description {
		margin-right: 5%;
		font-size: 1rem;
	}

	.about-page__yellow-element {
		top: 1%;
	}

	.about-page__blue-element {
		top: 50%;
		left: 50%;
	}

	.contact-page__form-wrapper {
		width: 100%;
	}

	.contact-page__wrapper .row {
		max-width: 100%;
	}

	.contact-page__yellow-element {
		left: 83%;
	}

	.contact-page__btn {
		font-size: 1rem;
	}

}
/* ... */

